metadata/force-app/main/default/objects/CustomName_IHShu__c/CustomName_IHShu__c.object-meta.xml
<CustomObject>
    <description>Description_ISeIE</description>
    <label>CustomLabel_qkIAo</label>
    <nameField>
        <label>CustomLabel_qkIAo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qkIAos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>