metadata/force-app/main/default/objects/CustomName_IHShu__c/fields/CustomField_KGiAq__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KGiAq__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPQlLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>