metadata/force-app/main/default/objects/CustomName_IHShu__c/fields/CustomField_uzofK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_uzofK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTvOmm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>